# polymarket-copy-trading-bot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/application/: trader_app_service.py
app/config/: config.py  config_factory.py  env.py  in_memory_config.py  polymarket_config.py
app/domain/: condition_id.py  side_type.py  token_id.py  wallet_address.py
app/domain/trade/: trade.py  trade_builder.py  trade_factory.py  trade_repository.py  trade_validator.py
app/domain/trade/exceptions/: identical_trade_exception.py  insufficient_balance_exception.py  no_trade_found_exception.py
app/domain/wallet_balance/: wallet_balance_repository.py  wallet_balance_validator.py
app/infrastructure/: polygon_web3_factory.py  side_type_polymarket_mapper.py
app/infrastructure/trade/: in_memory_trade_repository.py  polymarket_trade_repository.py  trade_polymarket_dto.py  trade_polymarket_mapper.py
app/infrastructure/wallet_balance/: in_memory_wallet_balance_repository.py  polygon_wallet_balance_repository.py
app/interfaces/: trader_resource.py
app/interfaces/exceptions/: no_rpc_found_exception.py
tests/: conftest.py
tests/application/: test_trader_app_service.py
tests/domain/: test_side_type.py  test_trade.py  test_wallet_address.py
tests/domain/trade/: test_trade_factory.py  test_trade_size_strategies.py  test_trade_validator.py
tests/domain/wallet_balance/: test_wallet_balance_validator.py
tests/infrastructure/trade/: test_in_memory_trade_repository.py
tests/infrastructure/wallet_balance/: test_in_memory_wallet_balance_repository.py
(+18 files in other folders)
