[project]
name = "polymarket-copy-trading-bot"
version = "0.1.0"
description = "A copy trading bot for Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.11",
    "web3>=7.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "py-clob-client>=0.30.0",
    "python-dotenv>=1.0.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disable_error_code = "import-untyped"